--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
 }
